# OpenHMD

./: CMakeLists.txt  configure.ac  meson.build  meson_options.txt
src/: Makefile.am  openhmd.c  openhmdi.h
src/drv_serial/: serial.c
