option(
	'examples',
	type: 'array',
	choices: [
		'simple',
		'opengl',
		'',
	],
	value: [
		'simple',
	],
)

option(
	'drivers',
	type: 'array',
	choices: [
		'rift',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'external',
		'android',
		'serial',
	],
	value: [
		'rift',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'external',
		'serial',
	],
)

option(
	'hidapi',
	type: 'combo',
	choices: [
		'auto',
		'libusb',
		'hidraw'
	],
	value: 'auto',
)
